hands-on/Kubernetes/practice/16-service-mesh/virtual-service-reviews-test-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: reviews
        subset: v2
  - route:
    - destination:
        host: reviews
        subset: v1
# Virtual Service นี้ประกอบด้วยกฎการ routing ดังนี้:
# 1. เมื่อมี HTTP request ที่มี header "end-user" เป็น "jason" จะถูกส่งไปยัง reviews เวอร์ชัน v2
# 2. สำหรับ request อื่นๆ ทั้งหมด จะถูกส่งไปยัง reviews เวอร์ชัน v1
# การทำ routing แบบนี้เหมาะสำหรับการทำ A/B Testing กับผู้ใช้เฉพาะกลุ่ม
